fixed dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,14 +17,14 @@
 */
 
 :root {
-  --background: #171717;
-  --foreground: #171717;
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #0a0a0a;
+    --foreground: #ededed;
   }
 }
 
